cmake_minimum_required(VERSION 3.10)
project(light_detection)
find_package(OpenCV REQUIRED)
find_package(Eigen3 REQUIRED)
include_directories(${OpenCV_INCLUDE_DIRS})
include_directories(${PROJECT_SOURCE_DIR}/include)
add_executable(light main.cpp src/light_detection_base.cpp src/pnp_solver.cpp)
target_link_libraries(light PRIVATE ${OpenCV_LIBS})
target_link_libraries(light PRIVATE Eigen3::Eigen)